<resources>
    <string name="app_name">PiMotorCar</string>
    <string name="str_forward">前进              </string>
    <string name="str_astern">倒车              </string>
    <string name="str_turnleft">左转弯</string>
    <string name="str_turnright">右转弯</string>
    <string name="str_stop">停车</string>
    <string name="str_start">启动</string>
    <string name="str_settings">设置</string>
    <string name="str_ipaddress">IP地址：</string>
    <string name="str_default_ipaddress">192.168.1.201</string>
    <string name="str_port">端口：</string>
    <string name="str_default_port">9090</string>
    <string name="str_connect">测试连接</string>
    <string name="str_save">保存</string>
    <string name="str_camera_uri">摄像头视频地址</string>
    <string name="str_default_camera_uri">http://112.253.22.157/17/z/z/y/u/zzyuasjwufnqerzvyxgkuigrkcatxr/hc.yinyuetai.com/D046015255134077DDB3ACA0D7E68D45.flv</string>
</resources>
