<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.syn.pimotorcar.MotorCarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="10">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:weightSum="1">

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight="0.8">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_forward"
                    android:id="@+id/rb_forward"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:layout_gravity="center_vertical" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_astern"
                    android:id="@+id/rb_astern"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />
            </RadioGroup>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings"
                android:id="@+id/btn_settings"
                android:layout_weight="0.2"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <io.vov.vitamio.widget.VideoView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wv_camera"
            android:layout_weight="9.8"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_weight="0.1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_turnleft"
                android:id="@+id/btn_turnleft"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_start"
                android:id="@+id/toggleButton"
                android:textOn="@string/str_start"
                android:textOff="@string/str_stop"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_turnright"
                android:id="@+id/btn_turnright"
                android:layout_weight="1
                " />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
